--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,9 +8,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Configurar Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.13.4
     - name: Instalar dependências
+      run: pip install -r requirements.txt
     - name: Rodar os testes
-      run: pytest
+      run: pytest 
