--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,4 +15,4 @@ jobs:
     # - name: Instalar dependências
     #   run: pip install -r requirements.txt
     - name: Rodar os testes
-      run: py test_app.py
+      run: pytest
